# ReadySet

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODEOWNER  Makefile  README.en.md  README.md  ReadySet.doap  gcovr.cfg  index.html  meson.build  meson.options  meson_options.txt  vala-lint.conf
data/: default-steps  meson.build  org.altlinux.ReadySet.Devel.desktop.in  org.altlinux.ReadySet.Devel.desktop.in.in  org.altlinux.ReadySet.desktop.in  org.altlinux.ReadySet.desktop.in.in  org.altlinux.ReadySet.gresource.xml  org.altlinux.ReadySet.gschema.xml  org.altlinux.ReadySet.metainfo.xml.in  org.altlinux.ReadySet.rules.in  ready-set-existing-user.service.in  ready-set-sysusers.conf  ready-set-tmpfiles.conf  ready-set.service.in  ready-set.session  space.rirusha.ReadySet-Devel.desktop.in  space.rirusha.ReadySet.desktop.in  space.rirusha.ReadySet.gresource.xml  space.rirusha.ReadySet.gschema.xml  space.rirusha.ReadySet.metainfo.xml.in  style.css
data/completion/: bash.in
data/dconf/: meson.build
data/gnome-initial-setup/: README.md  gnome-initial-setup-tmpfiles.conf  gnome-initial-setup-tmpfiles.conf.in  gnome-initial-setup.service.in  gnome-initial-setup.session  gnome-initial-setup.session.conf.in  meson.build
data/gnome-initial-setup/dconf/: meson.build
data/gnome-initial-setup/sysusers/: gnome-initial-setup.conf.in  meson.build
data/gnome-initial-setup/tmpfiles/: gnome-initial-setup.conf.in  meson.build
data/startup/: meson.build
data/startup/alt-mobile/: ready-set-alt-mobile  ready-set-alt-mobile-run  ready-set-alt-mobile.service
data/startup/default/: ready-set-run
data/startup/ximper/: ready-set-ximper  ready-set-ximper-post  ready-set-ximper-run  ready-set-ximper.service  setup.target
data/ui/: alt-mobile-user-page.blp  base-page-desc.blp  base-page.blp  carousel-page-titles.blp  context-row.blp  devel-add-context-dialog.blp  devel-window.blp  end-page.blp  existing-user-end-page.blp  help-overlay.blp  initial-setup-end-page.blp  input-chooser.blp  input-row.blp  installer-end-page.blp  keyboard-page.blp  language-page.blp  language-row.blp  languages-box.blp  margin-label.blp  nothing-to-show.blp  pages-indicator.blp  password-strength.blp  step-row.blp  steps-main-page.blp  steps-sidebar.blp  test-error-page.blp  test-page.blp  user-page.blp  welcome-page.blp  window-content.blp  window.blp
internal/: application.vala  config.vapi  main.vala  meson.build  utils.vala
lib/data/: meson.build  org.altlinux.ReadySet.Lib.InitialSetup.gresource.xml  org.altlinux.ReadySet.Lib.gresource.xml  org.altlinux.ReadySet.rules.in  style.css
lib/data/ui/: base-bare-page.blp  base-page.blp
lib/doc/: meson.build
lib/initial-setup/data/: meson.build
lib/initial-setup/doc/: meson.build
lib/initial-setup/src/: addin.vala  base-page.vala  meson.build  utils.vala
lib/src/: addin.vala  allowable.vala  apply-callback.vala  applyable.vala  c-utils.c  c-utils.vapi  context-internal.vala  context-object.vala  context.vala  extension-base-internal.vala  extension-base.vala  installer-addin-internal.vala  installer-addin.vala  installer-step.vala  lib-utils-internal.vala  lib-utils.vala  main.vala  meson.build  step-addin.vala  utils.vala
lib/src/base/: base-bare-page.vala  base-page-desc.vala  base-page.vala  status-page.vala
plugins/date-and-time/: carousel-selector.vala  date-and-time-selector.vala  date-selector.vala  infinity-carousel.vala  meson.build  page.vala  plugin.vala  time-selector.vala  timezone-list-row.vala  timezone-list.vala  utils.vala
plugins/date-and-time/data/: meson.build  org.altlinux.ReadySet.Plugin.DateAndTime.gresource.xml  org.altlinux.ReadySet.Plugin.DateAndTime.rules  style.css
plugins/date-and-time/po-timezones/: meson.build
plugins/gui/language/: box.vala  meson.build  page.vala  row.vala  utils.vala
plugins/gui/test/: error-page.vala  meson.build  page.vala  plugin.vala
plugins/gui/user/: README.md  meson.build  page-password.vala  page-username.vala  page.vala  passwdqc-utils.vala  password-strength.vala  plugin.vala  utils.vala  (+1 more)
plugins/keyboard/: README.en.md  README.md  current-input-row.vala  current-input-sources.vala  enums.vala  hw-tracker.vala  ibus-utils.vala  input-chooser.vala  input-info.vala  input-row.vala  input-sources-dialog.vala  input-sources-manager.vala  input-sources.vala  layout-switch-button.vala  meson.build  page.vala  plugin.vala  preview-dialog.vala  stevia-layout-data.vala  utils.vala
plugins/license-agreement/: README.en.md  README.md  meson.build  page.vala  plugin.vala  utils.vala
plugins/network/: meson.build  page.vala  plugin.vala  utils.vala
plugins/test-installer/: meson.build  plugin.vala
service/: config.vapi  copy-to-user.vala  hooks.vala  main.vala  meson.build  polkit.vala  service.vala  systemd-manager.vala  utils.vala
service/data/: meson.build  org.altlinux.ReadySet.conf.in  org.altlinux.ReadySet.policy.in  org.altlinux.ReadySet.service.in  ready-set.service.in
src/: about.vala  application.vala  config.vapi  data.vala  main.vala  meson.build  options-handler.vala  pages-model.vala  plugin-manager.vala  result.vala  utils-user.vala  utils.vala  window-content.vala  window.vala
src/completions/: bash.vala
src/dbus/: osk.vala  rs-system-service.vala
src/end-pages/: initial-setup.vala
src/pages/: base-page.vala  end-page.vala  existing-user-end-page.vala  initial-setup-end-page.vala  installer-end-page.vala  language-page.vala  test-page.vala  welcome-page.vala
src/widgets/: base-page-desc.vala  carousel-page-titles.vala  context-row.vala  lang-select-title.vala  language-row.vala  languages-box.vala  margin-label.vala  nothing-to-show.vala  pages-indicator.vala  password-strength.vala  positioned-stack.vala  step-row.vala  steps-main-page.vala  steps-sidebar.vala
tests/: meson.build  service-copy-to-user.vala  test-config.vapi  test-context.vala  test-plugin-manager.vala  test-service-env-exec.vala  test-service-hooks.vala
vapi/: .gitignore  gdm-vapi-gen  gtk4-vapi-fix  libpeas-2.vapi  meson.build  pms-1.0.vapi  pms-vapi-gen  pwquality.vapi
(+472 files in other folders)
