option(
  'is_devel',
  type: 'boolean',
  value: false
)
option(
  'have_ibus',
  type: 'boolean',
  value: true
)
option(
  'with_lib_documentation',
  type: 'boolean',
  value: false,
  description: 'Whether to build library documentation',
)
option(
  'with_lib_introspection',
  type: 'boolean',
  value: true,
  description: 'Whether to build library introspection files',
)
option(
  'password_check_backend',
  type: 'combo',
  choices: ['passwdqc', 'pwquality', 'both'],
  value : 'passwdqc'
)
option('gdm_rundir',
  type: 'string',
  value: '/run/gdm',
  description: 'GDM\'s runtime directory. The dynamic gnome-initial-setup user\'s home dir is exported here',
)
option('user_with_set_root',
  type: 'boolean',
  value: false,
  description: 'Enable option with setting root by user at initial-setup mode. It can be not secure, so it disabled by default'
)
