option(
  'nightly',
  type: 'boolean',
  value: false
)

# Lib
option(
  'with_lib_documentation',
  type: 'boolean',
  value: false,
  description: 'Whether to build library documentation',
)
option(
  'with_lib_introspection',
  type: 'boolean',
  value: true,
  description: 'Whether to build library introspection files',
)

# GDM
option(
  'gdm_rundir',
  type: 'string',
  value: '/run/gdm',
  description: 'GDM\'s runtime directory. The dynamic gnome-initial-setup user\'s home dir is exported here',
)

# Keyboard
option(
  'ibus',
  type: 'feature',
  value: 'auto'
)

# User
option(
  'password_check_backend',
  type: 'combo',
  choices: ['passwdqc', 'pwquality', 'both'],
  value : 'passwdqc'
)
option(
  'user_with_set_root',
  type: 'feature',
  value: 'auto',
  description: 'Enable option with setting root by user at initial-setup mode. It can be not secure, so it disabled by default'
)

# Tests
option(
  'install_tests',
  type: 'feature',
  value: 'disabled',
  description: 'Install tests plugins or not'
)
